--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description              : &description "Economista, Maestrando en UDESA"
 url                      : https:/JUANMBAEZ.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : #"" # the subpath of your site, e.g. "/blog"
 repository               : "JUANMBAEZ/juanbaez.github.io"
-teaser                   : "photo.jpg"
+teaser                   : "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
