--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Juan M.Báez"
+  name             : "Juan Manuel Báez"
   avatar           : "profile.png"
   bio              : "Economista, Maestrando en UDESA"
   location         : "Asuncion-Paraguay"
