--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "Paraguay"
-title                    : "Juan Manuel Báez / Acerca de mi"
+title                    : "Juan Manuel Báez"
 title_separator          : "-"
-name                     : &name "Juan Manuel Báez Cano"
+name                     : &name "Juan Manuel Báez"
 description              : &description "Economista, Maestrando en UDESA"
 url                      : https:/JUANMBAEZ.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : #"" # the subpath of your site, e.g. "/blog"
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Juan Manuel Báez"
-  avatar           : "profile.png"
+  avatar           : "photo.jpg"
   bio              : "Economista, Maestrando en UDESA"
   location         : "Asuncion-Paraguay"
   employer         :
