--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Juan Manuel Báez"
 title_separator          : "-"
 name                     : &name "Juan Manuel Báez"
 description              : &description "Economista, Maestrando en UDESA"
-url                      : https:/JUANMBAEZ.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https:/JUANMBAEZ/juanbaez.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : #"" # the subpath of your site, e.g. "/blog"
 repository               : "JUANMBAEZ/juanbaez.github.io"
 teaser                   : #"500x300.png"
